<resources>
    <string name="app_name">Pokemon Quiz</string>

    <string-array name="pokemon_names">
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
        <item>Metapod</item>
        <item>Butterfree</item>
        <item>Weedle</item>
        <item>Kakuna</item>
        <item>Beedrill</item>
        <item>Pidgey</item>
        <item>Pidgeotto</item>
        <item>Pidgeot</item>
        <item>Rattata</item>
        <item>Raticate</item>
        <item>Spearow</item>
        <item>Fearow</item>
        <item>Ekans</item>
        <item>Arbok</item>
        <item>Pikachu</item>
        <item>Raichu</item>
        <item>Sandshrew</item>
        <item>Sandslash</item>
        <item>Nidoran ♀</item>
        <item>Nidorina</item>
        <item>Nidoqueen</item>
        <item>Nidoran ♂</item>
        <item>Nidorino</item>
        <item>Nidoking</item>
        <item>Clefairy</item>
        <item>Clefable</item>
        <item>Vulpix</item>
        <item>Ninetales</item>
        <item>Jigglypuff</item>
        <item>Wigglytuff</item>
        <item>Zubat</item>
        <item>Golbat</item>
        <item>Oddish</item>
        <item>Gloom</item>
        <item>Vileplume</item>
        <item>Paras</item>
        <item>Parasect</item>
        <item>Venonat</item>
        <item>Venomoth</item>
        <item>Diglett</item>
        <item>Dugtrio</item>
        <item>Meowth</item>
        <item>Persian</item>
        <item>Psyduck</item>
        <item>Golduck</item>
        <item>Mankey</item>
        <item>Primeape</item>
        <item>Growlithe</item>
        <item>Arcanine</item>
        <item>Poliwag</item>
        <item>Poliwhirl</item>
        <item>Poliwrath</item>
        <item>Abra</item>
        <item>Kadabra</item>
        <item>Alakazam</item>
        <item>Machop</item>
        <item>Machoke</item>
        <item>Machamp</item>
        <item>Bellsprout</item>
        <item>Weepinbell</item>
        <item>Victreebel</item>
        <item>Tentacool</item>
        <item>Tentacruel</item>
        <item>Geodude</item>
        <item>Graveler</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Rapidash</item>
        <item>Slowpoke</item>
        <item>Slowbro</item>
        <item>Magnemite</item>
        <item>Magneton</item>
        <item>Farfetch\'d</item>
        <item>Doduo</item>
        <item>Dodrio</item>
        <item>Seel</item>
        <item>Dewgong</item>
        <item>Grimer</item>
        <item>Muk</item>
        <item>Shellder</item>
        <item>Cloyster</item>
        <item>Ghastly</item>
        <item>Haunter</item>
        <item>Gengar</item>
        <item>Onix</item>
        <item>Drowzee</item>
        <item>Hypno</item>
        <item>Krabby</item>
        <item>Kingler</item>
        <item>Voltorb</item>
        <item>Electrode</item>
        <item>Exeggcute</item>
        <item>Exeggutor</item>
        <item>Cubone</item>
        <item>Marowak</item>
        <item>Hitmonlee</item>
        <item>Hitmonchan</item>
        <item>Lickitung</item>
        <item>Koffing</item>
        <item>Weezing</item>
        <item>Rhyhorn</item>
        <item>Rhydon</item>
        <item>Chansey</item>
        <item>Tangela</item>
        <item>Kangaskhan</item>
        <item>Horsea</item>
        <item>Seadra</item>
        <item>Goldeen</item>
        <item>Seaking</item>
        <item>Staryu</item>
        <item>Starmie</item>
        <item>Mr. Mime</item>
        <item>Scyther</item>
        <item>Jynx</item>
        <item>Electabuzz</item>
        <item>Magmar</item>
        <item>Pinsir</item>
        <item>Tauros</item>
        <item>Magikarp</item>
        <item>Gyarados</item>
        <item>Lapras</item>
        <item>Ditto</item>
        <item>Eevee</item>
        <item>Vaporeon</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Porygon</item>
        <item>Omanyte</item>
        <item>Omastar</item>
        <item>Kabuto</item>
        <item>Kabutops</item>
        <item>Aerodactyl</item>
        <item>Snorlax</item>
        <item>Articuno</item>
        <item>Zapdos</item>
        <item>Moltres</item>
        <item>Dratini</item>
        <item>Dragonair</item>
        <item>Dragonite</item>
        <item>Mewtwo</item>
        <item>Mew</item>
    </string-array>
    <string-array name="titles">
        <item>Entrenador Principiante</item>
        <item>Entrenador Promesa</item>
        <item>Pokemaníaco</item>
        <item>Entrenador Guay</item>
        <item>Veterano</item>
        <item>Aspirante</item>
        <item>Líder de Gimnasio</item>
        <item>Alto Mando</item>
        <item>Campeón</item>
        <item>Maestro Pokémon</item>
    </string-array>
    <string name="ButtonText_BackToMainMenu">Volver al menú principal</string>
    <string name="Text_YourScore">PUNTUACIÓN:</string>
    <string name="ButtonText_Stats">Estadísticas</string>
    <string name="pokemonquiz">PokemonQuiz</string>
    <string name="ButtonText_Play">Jugar</string>
    <string name="ButtonText_MoreGames">Más juegos</string>
    <string name="ButtonDescription_PlaySound">Botón para reproducir sonido</string>
    <string name="ImageDescription_QuestionImage">Imagen de la pregunta</string>
    <string name="ImageDescription_Title">Título</string>
    <string name="Text_ByNestors">Por Nestor\'s Imagination</string>
    <string name="Text_Note">Pokémon es una marca registrada de Game Freak y Nintendo. Éste es un juego no oficial creado por un fan para fans de Pokémon sin ningún ánimo de lucro.</string>
    <string name="Text_Accuracity">Porcentaje de acierto:</string>
    <string name="Text_NumCorrect">Número de preguntas acertadas:</string>
    <string name="Text_PlayedGames">Número de partidas acabadas:</string>
    <string name="ButtonText_EraseData">Borrar estadísticas</string>
    <string name="ButtonText_BackToMenu">Volver al menú principal</string>
    <string name="Text_WrongAnswer">¡INCORRECTO!</string>
    <string name="Text_CorrectAnswer">¡CORRECTO!</string>
    <string name="Text_GameExit">¿Quieres salir de la partida actual?</string>
    <string name="Text_Exit">Salir</string>
    <string name="Text_KeepPlaying">Seguir en la partida</string>
    <string name="quickGame">Partida rápida</string>
    <string name="onlineBattle">Combate online</string>
    <string name="scoreTextView">Puntuación: 999999</string>
    <string name="titleTextView">Maestro Pokémon</string>
    <string name="serverURL">https://pokemon-quiz-plenidag.c9users.io</string>
    <string name="welcome">¡Bienvenido a Pokémon Quiz!</string>
    <string name="insertTrainerName">Escribe tu nombre de entrenador para comenzar:</string>
    <string name="allowedCharactersInName">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890çÇüÜáéíóúÁÉÍÓÚ_</string>
    <string name="trainerCreated">Entrenador creado. ¡Qué te diviertas!</string>
    <string name="enterGame">Entrar</string>
    <string name="problemGoogleAuthentication">A problem occurred on user sign in</string>
    <string name="googleAuthToken">636369640789-cj2hp4pn6418nk4ioro7v6od2obqf50t.apps.googleusercontent.com</string>
    <string name="score">"Puntuación: "</string>
    <string name="titleChange">Pokémon Quiz: Cambio de Título</string>
    <string name="titleUp">subido</string>
    <string name="titleDown">bajado</string>
    <string name="titleChangeInit">"Tu título de entrenador ha "</string>
    <string name="titleChangeFrom">" de "</string>
    <string name="titleChangeTo">" a "</string>

</resources>
