<?xml version="1.0" encoding="utf-8"?>
<!--Actividad obsoleta, a borrar-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.burningflower.pokemonquiz.view.StatsActivity"
    android:background="@android:color/background_light"
    android:layout_margin="0dp">

    <TextView
        android:text="@string/ButtonText_Stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/statsText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="36sp" />

    <TextView
        android:text="XXX%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentAcuracity"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/percentAcuracityText"
        android:layout_alignEnd="@+id/percentAcuracityText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="XXXXX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numCorrectAnswers"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/numCorrectAnswersText"
        android:layout_alignEnd="@+id/numCorrectAnswersText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="XXXXX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/numGames"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_below="@+id/numGamesText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Text_Accuracity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentAcuracityText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/numCorrectAnswers"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Text_NumCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numCorrectAnswersText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/numGames"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Text_PlayedGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numGamesText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/statsText"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/ButtonText_EraseData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eraseData"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:soundEffectsEnabled="false" />

    <Button
        android:text="@string/ButtonText_BackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/eraseData"
        style="@style/Widget.AppCompat.Button"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:layout_alignTop="@+id/eraseData"
        android:layout_marginEnd="5dp"
        android:soundEffectsEnabled="false" />
</RelativeLayout>
