<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.burningflower.pokemonquiz.view.QuestionActivity"
    android:background="@android:color/background_light"
    android:layout_margin="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/title"
        android:id="@+id/imageView"
        android:contentDescription="@string/ImageDescription_Title"
        android:layout_gravity="top"
        android:layout_weight="2" />

    <com.burningflower.pokemonquiz.widgets.AutoResizeTextView
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="none"
        android:layout_weight="1"
        android:text="trainer name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="100sp"
        android:maxLines="1"
        android:gravity="center" />

    <com.burningflower.pokemonquiz.widgets.AutoResizeTextView
        android:id="@+id/playerTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="none"
        android:layout_weight="1"
        android:text="@string/titleTextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="100sp"
        android:maxLines="1"
        android:gravity="center" />

    <com.burningflower.pokemonquiz.widgets.AutoResizeTextView
        android:id="@+id/playerScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="none"
        android:layout_weight="1"
        android:text="@string/scoreTextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="100sp"
        android:maxLines="1"
        android:gravity="center" />

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/title"
        android:id="@+id/TheTitle"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pokemonquiz" />-->

    <com.burningflower.pokemonquiz.widgets.AutoResizeButtonText
        android:id="@+id/buttonPlay"
        android:text="@string/quickGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="none"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:textSize="28sp"
        style="@android:style/Widget.Button"
        android:background="@drawable/answer_button"
        android:textColor="@android:color/background_light"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:soundEffectsEnabled="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <com.burningflower.pokemonquiz.widgets.AutoResizeButtonText
        android:id="@+id/buttonVersus"
        android:text="@string/onlineBattle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="none"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:textSize="28sp"
        style="@android:style/Widget.Button"
        android:background="@drawable/answer_button"
        android:textColor="@android:color/background_light"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:soundEffectsEnabled="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


</LinearLayout>
